--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>DOC</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="bundle.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Public+Sans&display=swap" rel="stylesheet">
+  <title>DOC</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="bundle.js"></script>
+</body>
+
 </html>
